security/keycloak/k8s/base/deployment.yaml
---
# keycloak/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    flexwiz.io/app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      flexwiz.io/app: keycloak
  template:
    metadata:
      labels:
        flexwiz.io/app: keycloak
    spec:
      containers:
      - name: keycloak
        image: keycloak
        #args: ["--import-realm"]
        ports:
          - name: http
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
