security/keycloak/k8s/base/service.yaml
---
# keycloak/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    flexwiz.io/app: keycloak
