security/keycloak/k8s/base/ingress.yaml
---
# keycloak/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  labels:
    flexwiz.io/app: keycloak
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: auth.flexwiz.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              name: http
  tls:
  - hosts:
    - auth.flexwiz.io
    secretName: keycloak-tls
